Dummy_Package_for_scratch_org/main/default/objects/Installed_Artifact_Version__c/Installed_Artifact_Version__c.object-meta.xml
<CustomObject>
    <description>Provide visibility of which package versions are installed in any given environment.</description>
    <label>Installed Package Version</label>
    <nameField>
        <displayFormat>IPV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>