Dummy_Package_for_scratch_org/main/default/objects/Installed_Artifact_Version__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Installed Package Versions</relationshipLabel>
    <relationshipName>Installed_Package_Versions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>