Dummy_Package_for_scratch_org/main/default/objects/Installed_Artifact_Version__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <label>Package Version</label>
    <referenceTo>Artifact_Version__c</referenceTo>
    <relationshipLabel>Installed Package Versions</relationshipLabel>
    <relationshipName>Installed_Package_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>