Dummy_Package_for_scratch_org/main/default/objects/Installed_Artifact_Version__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Uninstalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>